--- a/appsscript.json
+++ b/appsscript.json
@@ -1,6 +1,13 @@
 {
   "timeZone": "UTC",
   "dependencies": {
+    "enabledAdvancedServices": [
+      {
+        "userSymbol": "Gmail",
+        "version": "v1",
+        "serviceId": "gmail"
+      }
+    ]
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
